# tree-menu

./: pyproject.toml
testTreeMenu/: db.sqlite3  manage.py
testTreeMenu/index/: urls.py  views.py
testTreeMenu/index/static/css/: index_styles.css
testTreeMenu/index/templates/index/: base.html  index.html
testTreeMenu/testTreeMenu/: asgi.py  settings.py  urls.py  wsgi.py
testTreeMenu/treeMenu/: admin.py  models.py
testTreeMenu/treeMenu/migrations/: 0001_initial.py  0002_remove_menuitem_children_menuitem_parent.py
testTreeMenu/treeMenu/static/css/: styles.css
testTreeMenu/treeMenu/templates/menu/: menu.html  menu_children.html  menu_shell.html
testTreeMenu/treeMenu/templatetags/: menu_tags.py
